src/test/ui/consts/min_const_fn/loop_ice.stderr
error[E0658]: `loop` is not allowed in a `const fn`
  --> $DIR/loop_ice.rs:2:5
   |
LL |     loop {}
   |     ^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/52000
   = help: add `#![feature(const_loop)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
