src/test/ui/consts/min_const_fn/loop_ice.rs
const fn foo() {
    loop {} //~ ERROR `loop` is not allowed in a `const fn`
}

fn main() {}
